# mail-orchestrator

./: .gitignore  ABOUT.md  JOURNEY.md  README.md  SETUP.md  TECHNICAL_DEBT.md  package-lock.json  package.json
backend/: .env.example  GUIDE.md  README.md  alembic.ini  package.json  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 903c8c1991f9_add_send_count_column_to_emails_table.py  a2572967abb1_create_core_tables.py  e1fd93358d44_create_baseline_schema.py  e335cfabd849_populate_send_count_for_existing_emails.py
backend/app/: main.py
backend/app/api/: auth.py  emails.py  gmail.py  settings.py  templates.py
backend/app/core/: config.py  time_utils.py
backend/app/db/: deps.py  session.py
backend/app/gmail/: credentials_provider.py  gmail_client.py  gmail_sender.py  mime_builder.py  oauth_service.py  reply_detector.py  token_store.py
backend/app/models/: __init__.py  email.py  email_attachment.py  enums.py  settings.py  template.py  template_placeholder.py
backend/app/schemas/: email.py  settings.py  template.py  template_placeholder.py
backend/app/services/: email_service.py  settings_service.py  template_service.py
backend/secrets/: credentials-example.jsonc  token.json
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: main.js
frontend/src/components/: loginModal.js  toast.js
frontend/src/lib/: api.js  editorSync.js  oauth.js  placeholders.js
frontend/src/pages/: appShell.js  authCallback.js  composePage.js  historyPage.js  router.js  (+2 more)
scripts/: README.md  dev.mjs
(+1 files in other folders)
